--- a/dondeEncontrarnos.html
+++ b/dondeEncontrarnos.html
@@ -5,47 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProyectoTHZ</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/estiloscss.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Signika:wght@300;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     
-    <header class="header__logoyslogan col-lg-12 col col-md-12 col-sm-12">
-        
-        <br>
-        <br>
-        <h1><b>THZ</b></h1>
-        <h2>Distribuidora familiar</h2>
-
-        <br>
-        <br>
-        <i>No solo sabemos, tambien tenemos lo que <b>vos</b> necesitas</i>
-    </header>
-   
-    <nav class=" container-fluid col-lg-12 col col-md-12 col-sm-12">
-   
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Nuestros Productos
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="nuestrosProductos.html">Cervezas</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Vinos</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Aperitivos</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Vodkas y Whiskys</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Consumo Domestico</a>
+    <nav class=" nav__main container-fluid col-lg-12 col col-md-12 col-sm-12">
+        <div class="nav__div--logothz">
+            <img src="LogoTHZ.png" alt="">
+        </div>
+    <div class="nav__div--Padrisimo">
+        <div class="nav__div--Padre">
+            <div class="dropdown nav__div--menu">
+                <button class="btn btn-secondary dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Nuestros Productos
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="nuestrosProductos.html">Cervezas</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Vinos</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Aperitivos</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Vodkas y Whiskys</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Consumo Domestico</a>
+                </div>
             </div>
-        </div>
-        <div class="nav__div--menu">
-            <div class="nav__div--menu"><a class="link" href="index.html">Home</a></div>
-            <div class="nav__div--menu"><a class="link" href="quienesSomos.html">Quiénes somos?</a></div>
-            <div class="nav__div--menu"><a class="link" href="dondeEncontrarnos.html">Dónde encontrarnos?</a></div>
-            <div class="nav__div--menu"><a class="link" href="contacto.html">Contacto</a></div>    
-        </div>
-   
-    </nav>
+            <div class="nav__div--menu"><a href="index.html">Home</a></div>
+            <div class="nav__div--menu"><a href="quienesSomos.html">Quiénes somos?</a></div>
+            <div class="nav__div--menu"><a href="dondeEncontrarnos.html">Dónde encontrarnos?</a></div>
+            <div class="nav__div--menu"><a href="contacto.html">Contacto</a></div>  
+        </div> 
+         <div class="nav__div--Slogan"><p><i>No solo sabemos, tambien tenemos los que <b>vos</b> necesitas.</i></p></div>
+    </div>     
+</nav>
 <hr>
 
 <div class="divPadre">
