--- a/index.html
+++ b/index.html
@@ -9,65 +9,48 @@
     <title>THZ-Distribuidora-Bebidas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    
+    <link rel="stylesheet" type="text/css" href="css/estiloscss.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Signika:wght@300;700&display=swap"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
 
-    <header class="header__logoyslogan col-lg-12 col col-md-12 col-sm-12">
-        
-        <br>
-        <br>
-        <h1><b>THZ</b></h1>
-        <h2>Distribuidora familiar</h2>
-<br>
-        <i>No solo sabemos, tambien tenemos lo que <b>vos</b> necesitas</i>
-    </header>
    
-    <nav class=" container-fluid col-lg-12 col col-md-12 col-sm-12">
-   
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Nuestros Productos
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="nuestrosProductos.html">Cervezas</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Vinos</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Aperitivos</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Vodkas y Whiskys</a>
-              <a class="dropdown-item" href="nuestrosProductos.html">Consumo Domestico</a>
+<nav class=" nav__main container-fluid col-lg-12 col col-md-12 col-sm-12">
+        <div class="nav__div--logothz">
+            <img src="LogoTHZ.png" alt="">
+        </div>
+    <div class="nav__div--Padrisimo">
+        <div class="nav__div--Padre">
+            <div class="dropdown nav__div--menu">
+                <button class="btn btn-secondary dropdown-toggle link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Nuestros Productos
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="nuestrosProductos.html">Cervezas</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Vinos</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Aperitivos</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Vodkas y Whiskys</a>
+                    <a class="dropdown-item" href="nuestrosProductos.html">Consumo Domestico</a>
+                </div>
             </div>
-        </div>
-        <div class="nav__div--menu">
-            <div class="nav__div--menu"><a class="link" href="index.html">Home</a></div>
-            <div class="nav__div--menu"><a class="link" href="quienesSomos.html">Quiénes somos?</a></div>
-            <div class="nav__div--menu"><a class="link" href="dondeEncontrarnos.html">Dónde encontrarnos?</a></div>
-            <div class="nav__div--menu"><a class="link" href="contacto.html">Contacto</a></div>    
-        </div>
-   
-    </nav>
-    <!-- <div class="divmen">
-        <nav>
-            <ul class="link menu">
-                <li><a class="link" href="index.html">Home</a></li>
-                <li><a class="link" href="quienesSomos.html">Quiénes somos?</a></li>
-                <li><a class="link" href="dondeEncontrarnos.html">Dónde encontrarnos?</a></li>
-                <li><a class="link" href="contacto.html">Contacto</a></li>
-                <li><a class="link" href="nuestrosProductos.html">Nuestros Productos</a>
-                    <ul class="link" id="submenu">
-                        <li>Cervezas</li>
-                        <li>Vinos</li>
-                        <li>Aperitivos</li>
-                        <li>Vodkas y Whiskys</li>
-                        <li>Consumo Domestico</li>
-                    </ul>
-                </li>
-        </ul>
-        </nav>
-    </div> -->
-    <br>
+            <div class="nav__div--menu"><a href="index.html">Home</a></div>
+            <div class="nav__div--menu"><a href="quienesSomos.html">Quiénes somos?</a></div>
+            <div class="nav__div--menu"><a href="dondeEncontrarnos.html">Dónde encontrarnos?</a></div>
+            <div class="nav__div--menu"><a href="contacto.html">Contacto</a></div>  
+        </div> 
+         <div class="nav__div--Slogan"><p><i>No solo sabemos, tambien tenemos los que <b>vos</b> necesitas.</i></p></div>
+    </div>     
+</nav>
+<section class="sectio__prueba--fondo">
+    <div> <img class="animate__animated animate__slideInDown animate__infinite" src="down-arrow.png" alt=""></div>
+    <a class="section__div--wp" href="https://api.whatsapp.com/send?phone=541139174693"><img src="whatsapp.png" alt=""></a>
+</section>
+<div class="div__transicion">Conocenos</div>
+<br>
 <div class="divPadre container-fluid">
     <section class="section__centrado">
         <div class="section__div--Qs col-lg-4 col col-md-6 col-sm-12">
@@ -159,6 +142,7 @@
        $("#mostrarmodal").modal("show");
     });
   </script>
+ 
 </body>
 
 </html>
