--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -10,7 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class=" nav__main container-fluid col-lg-12 col col-md-12 col-sm-12">
+  <div class="menuResponsive">
+    <div class="div_menuResponsive"><a href="#" class="bt-menu"><i class="fas fa-bars"></i><div class="nav__div--logothz"><a href="index.html"><img src="LogoTHZResponsive.jpg" alt=""></a></div></a></div>
+    
+    <header>
+
+        <div>
+            <ul>    
+                <li><div class="nav__div--menu"><a href="quienesSomos.html">Quiénes somos?</a></div></li>
+                <li><div class="nav__div--menu"><a href="dondeEncontrarnos.html">Dónde encontrarnos?</a></div></li>
+                <li><div class="nav__div--menu"><a href="contacto.html">Contacto</a></div></li>
+                <li><div class="nav__div--menu"><a href="nuestrosProductos.html">Nuestros Productos</a></div></li>
+            </ul>
+        </div>    
+    </header>    
+</div>
+<nav class="nav__main container-fluid">
     <div class="nav__div--logothz">
         <img src="LogoTHZ.png" alt="">
     </div>
@@ -122,6 +137,9 @@
           <div>Beber con moderación. Prohibida su venta a menores de 18 años</div> 
       </div>
   </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="menuResponsive.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
